<resources>
    <string name="app_name">2022 Spring Learning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Year 3 Spring Learning</string>
    <string name="nav_header_subtitle">Cinnie She</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_fina">FINA3203</string>
    <string name="menu_comp_org">COMP2611</string>

    <string name="home_title"><u>Year 3 Spring Course Learning 2022</u></string>
    <string name="home"><u>Home</u></string>
    <string name="fina"><u>FINA3203</u></string>
    <string name="comp_org"><u>COMP2611</u></string>
    <string name="comp_alg"><u>COMP3711</u></string>
    <string name="rmbi"><u>RMBI4310</u></string>
    <string name="isom"><u>ISOM3710</u></string>
    <string name="comp_cloud"><u>COMP4651</u></string>
    <string name="course_icon_description">Course Icon</string>

    <string name="card_background_description">Background</string>
    <string name="btn_prev">Previous</string>
    <string name="btn_next">Next</string>

    <!-- FINA3203 Lecture Titles -->
    <string name="l1">| 01. Introduction to Financial Derivatives</string>
    <string name="l2">| 02. Forward Contracts on Financial Assets and Indices</string>
    <string name="l3">| 03. Forward Contracts on Interest Rate</string>
    <string name="l4">| 04. Forward Contracts on Foreign Currencies</string>
    <string name="l5">| 05. Forward Contracts on Commodities</string>
    <string name="l6">| 06. Future Contracts: Some Basics</string>
    <string name="l7">| 07. Interest Rate Swaps</string>
    <string name="l8">| 08. Commodity Swaps</string>
    <string name="l9">| 09. Other Popular Swaps</string>
    <string name="lX">| XX. Review: Forward &amp; Swaps</string>

    <!-- FINA3203 Lecture Content -->
    <string name="l1_content"><b><u>Why do we need to study financial derivatives?</u></b>\n\n- <b>Buy Side:</b> Have to understand financial derivatives to allow for certain investment strategies\nE.g., Swap contracts allow us to bet on certain direction of market movement with very low cost\n\n- <b>Sell Side:</b> Are responsible for providing solutions to meet our clients\' financial needs, which, financial derivatives are widely used in this space\nE.g., <b>Convertible bonds</b> are sometimes provided to clients who want to issue debts to raise funds —> increase the amount of funds raised (the pricing of convertible bonds involves pricing of options)\nE.g., <b>Institutional investors</b> will ask for financial derivatives to meet their special investment strategies\n\n<b><u>What is a Financial Derivative\?</u></b>\n\n<b>Definition: A derivative is a financial security or contract whose payoff depends on, or is derived from, the value of the \"underlying\”\n\nKey: The \“underlying\” provides the \‘fundamental\’ movement in the value (i.e., stock price determines the change of derivatives\’ value)</b>\n\nThe \“underlying\” can be: (i) Financial assets, (ii) Commodities, (iii) Intangible goods, (iv) Events, (v) Natural condition indices, (vi) Combined indices\n\n<b><u>Example of Financial Derivative Applications</u></b>\n\n1. Swiss Watchmaker, who has most of their sales in the Asian and US market, could <b>enter currency future or swaps to lock the exchange rate now for currency exchanges in the future</b>.\n\n2. An active strategy fund investing in the equity market has enjoyed some large capital gains through its position in some stocks. The fund manager wants to <b>lock in the profit without selling the stocks</b>. One solution is to <b>buy put options on the stock</b>, which allows the fund to sell the shares at certain prices in case the stock price falls in the future; Alternatively, the manager can <b>short forward contracts on the stock</b>, which locks the prices of selling stocks in the future.\n\n3. As a portfolio manager of an index fund, we are evaluated based on the tracking errors, we can <b>enter a variance swap on the index</b>, which pays off when market volatility rises, to <b>avoid tracking errors rise when markets become volatile</b>.\n\n4. Believing that the housing market is overheated, and that a <b>major correction in house prices will cause large amount of mortgage defaults</b>, leading to big losses in subprime loans particularly, we can <b>buy credit default swaps</b>, which are contracts that pay off when mortgage debt goes bad.\n\n5. As a non-executive board director of a public technology firm, we are trying to design a <b>compensation scheme for the new CEO</b>. On top of stocks, we can also compensate the CEO with <b>call options on the firm’s stock</b> so that he/she receives more when the firm has outstanding performance.\n\n<b><u>Interest Rate and Compounding</u></b>\n\n<b>Compounding</b> (risk-free investment – buying bonds/fixed income): reflects how the interest payments are made\n\nE.g., We invest $1 in a riskless bond at an annualized rate r\n—> r: the total interest payments received per annum\n\n<b>Annually-Compounded Interest Rate, r_a:</b>\n—> Time t: Invest $1\n—> Time t+1: Payment $1 + r_a\n\n<b>Semi-Annual Compounded Interest Rate, r_sa:</b>\n—> Time t: Invest $1\n—> Time t+0.5: Payment $r_sa/2\n—> Time t+1: Payment $1 + r_sa/2\n\n<b>Comparing Value of Cash Flows with Different Timing:</b>\n—> <b>Assumption: The investor can reinvest the 6-month interest payment at the same rate</b>\n—> Then, after 1 year, the investor having semi-annual compounded interest rate receives = r_sa/2 * (1 + r_sa/2) + (1 + r_sa/2) = (1 + r_sa/2)^2\n\n<b>Monthly- and Continuously-Compounded Interest Rate:</b>\n—> <b>Assumption: Absence of arbitrage, then the final payments should be the same for all types of interest rates</b>\n—> <b>1 + r_a = (1 + r_sa/2)^2 = (1 + r_m/12)^12 = e^r_c</b>\n\n<b>Pricing a Series of Riskless Cash Flow:</b>\n—> $1 after one year cost (1+r_a)^(-1) today\n—> Similarly, $1 after 6 months costs (1 + r_m/12)^(-6) today\n—> <b>Z(t, T)</b> denotes the time-t price of $1 paid at time T, which <b>Z(t, T) = e^(-r_c*(T-t))</b>\n—> <b>Z</b> also denotes zero-coupon bond, which is <b>risk-free, and has no dividend payments</b>\n\n<b><u>Additional Information:</u></b>\n\n<b>Convertible Bonds</b> have 2 parts: (i) Conventional bonds, (ii) Allow holders to convert the bond into stock\n<b>General Formula for Compounding: A = P (1 + r/n)^n*t</b></string>
    <string name="l2_content">This is a <u>dummy</u> text.</string>
    <string name="l3_content">dummy</string>
    <string name="l4_content">dummy</string>
    <string name="l5_content">dummy</string>
    <string name="l6_content">dummy</string>
    <string name="l7_content">dummy</string>
    <string name="l8_content">dummy</string>
    <string name="l9_content">dummy</string>
    <string name="lX_content">dummy</string>
</resources>