<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fina"
            android:icon="@drawable/ic_fina"
            android:title="@string/menu_fina" />
        <item
            android:id="@+id/nav_compOrg"
            android:icon="@drawable/ic_comp_org"
            android:title="@string/menu_comp_org" />
        <item
            android:id="@+id/nav_compAlg"
            android:icon="@drawable/ic_comp_alg"
            android:title="@string/comp_alg"/>
        <item
            android:id="@+id/nav_rmbi"
            android:icon="@drawable/ic_rmbi"
            android:title="@string/rmbi"/>
        <item
            android:id="@+id/nav_comp_cloud"
            android:icon="@drawable/ic_comp_cloud"
            android:title="@string/comp_cloud"/>
        <item
            android:id="@+id/nav_isom"
            android:icon="@drawable/ic_isom"
            android:title="@string/isom"/>
    </group>
</menu>