<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.year3spring.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_fina"
            app:destination="@id/nav_fina" />
        <action
            android:id="@+id/action_nav_home_to_nav_compOrg"
            app:destination="@id/nav_compOrg" />
    </fragment>

    <fragment
        android:id="@+id/nav_fina"
        android:name="com.example.year3spring.ui.fina3203.FinaFragment"
        android:label="@string/menu_fina"
        tools:layout="@layout/fina_fragment" />

    <fragment
        android:id="@+id/nav_compOrg"
        android:name="com.example.year3spring.ui.comp2611.CompOrgFragment"
        android:label="@string/menu_comp_org"
        tools:layout="@layout/comp_org_fragment" />
</navigation>