<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fina3203.FinaContentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_fina_content_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_margin"
            android:layout_marginBottom="@dimen/lecture_title_margin_bottom"
            android:fontFamily="@font/aref_ruqaa_bold"
            android:textSize="@dimen/lecture_title_font_size"
            tools:text="@string/l1" />

        <TextView
            android:id="@+id/text_fina_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_margin"
            android:justificationMode="inter_word"
            tools:text="@string/l1_content"
            android:lineSpacingExtra="@dimen/text_line_space" />
        <!--JustificationMode only available at API 26 or above-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_fina_prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:text="@string/btn_prev"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_fina_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_fina_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:text="@string/btn_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_fina_prev"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>